# countdown-grpo

./: .gitignore  NEXT_STEPS.md  README.md  RUNBOOK.md  pyproject.toml
configs/: debug_tiny_cpu.yaml  qwen05b_mps_smoke.yaml  qwen15b_4090.yaml  qwen15b_4090_v2.yaml  qwen3b_4090_offload.yaml  qwen3b_a100.yaml
docs/: step0_behavior_summary.json
docs/runs/: qwen15b_baseline_metrics.jsonl  qwen15b_tuned_partial_metrics.jsonl  qwen3b_a100_metrics.jsonl  solve_rate_1p5b.json  solve_rate_3b.json
scripts/: behavioral_step0.py  plot_metrics.py  pod_setup.sh  smoke_qwen.py  solve_rate_by_difficulty.py
src/grpo/: advantage.py  config.py  countdown.py  loss.py  models.py  rollout.py  train.py
tests/: test_advantage.py  test_countdown.py  test_e2e.py  test_loss.py  test_rollout.py  test_train_loop.py
