[project]
name = "countdown-grpo"
version = "0.1.0"
description = "From-scratch GRPO on the Countdown task (R1-Zero style replication)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "pyyaml>=6.0.3",
    "tokenizers>=0.22.2",
    "torch>=2.13.0",
    "transformers>=5.13.1",
]

[project.optional-dependencies]
wandb = [
    "wandb>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grpo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
